--- a/package.json
+++ b/package.json
@@ -51,8 +51,12 @@
     }
   },
   "dependencies": {
+    "dayjs": "^1.7.7",
+    "lodash-id": "^0.14.0",
+    "lowdb": "^1.0.0",
     "request": "^2.88.0",
     "request-progress": "^3.0.0",
+    "sprintf": "^0.1.5",
     "unzipper": "^0.9.4",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
