--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dayjs": "^1.7.7",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
+    "net-ping": "^1.2.3",
     "request": "^2.88.0",
     "request-progress": "^3.0.0",
     "sprintf": "^0.1.5",
