--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     }
   },
   "dependencies": {
+    "bulma": "^0.7.2",
     "dayjs": "^1.7.7",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
@@ -94,8 +95,8 @@
     "mini-css-extract-plugin": "0.4.0",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
-    "node-sass": "^4.9.2",
-    "sass-loader": "^7.0.3",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "vue-html-loader": "^1.2.4",
