--- a/package.json
+++ b/package.json
@@ -54,20 +54,19 @@
     }
   },
   "dependencies": {
-    "bulma": "^0.7.2",
     "dayjs": "^1.7.7",
+    "bulma": "^0.7.2",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
     "net-ping": "^1.2.3",
+    "unzipper": "^0.9.4",
+    "sprintf": "^0.1.5",
     "request": "^2.88.0",
     "request-progress": "^3.0.0",
-    "sprintf": "^0.1.5",
-    "unzipper": "^0.9.4",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vuex-electron": "^1.0.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
@@ -86,7 +85,7 @@
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^2.0.4",
+    "electron": "^3.0.8",
     "electron-builder": "^20.19.2",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
@@ -107,6 +106,7 @@
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.3",
+    "vuex-electron": "^1.0.0"
   }
 }
