--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
     "file-loader": "^1.1.11",
+    "har-validator": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "0.4.0",
     "multispinner": "^0.2.1",
@@ -102,11 +103,11 @@
     "vue-loader": "^15.2.4",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
+    "vuex-electron": "^1.0.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.3",
-    "vuex-electron": "^1.0.0"
+    "webpack-merge": "^4.1.3"
   }
 }
