--- a/package.json
+++ b/package.json
@@ -54,15 +54,15 @@
     }
   },
   "dependencies": {
-    "dayjs": "^1.7.7",
     "bulma": "^0.7.2",
+    "dayjs": "^1.7.7",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
-    "net-ping": "^1.2.3",
-    "unzipper": "^0.9.4",
-    "sprintf": "^0.1.5",
+    "ping": "^0.2.2",
     "request": "^2.88.0",
     "request-progress": "^3.0.0",
+    "sprintf": "^0.1.5",
+    "unzipper": "^0.9.4",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
