--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "author": "cjy <cjy632258@hotmail.com>",
   "description": "An electron-vue project",
-  "license": null,
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CaoJiayuan/vpp.git"
+  },
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
