--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "bulma": "^0.7.2",
     "dayjs": "^1.7.7",
+    "eva-icons": "^1.1.0",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
     "ping": "^0.2.2",
