--- a/package.json
+++ b/package.json
@@ -58,11 +58,15 @@
     }
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/vue-fontawesome": "^0.1.2",
     "bulma": "^0.7.2",
     "dayjs": "^1.7.7",
     "eva-icons": "^1.1.0",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
+    "nerio-js-utils": "^1.0.10",
     "ping": "^0.2.2",
     "request": "^2.88.0",
     "request-progress": "^3.0.0",
