--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpp",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "cjy <cjy632258@hotmail.com>",
   "description": "An electron-vue project",
   "license": "MIT",
@@ -64,6 +64,7 @@
     "bulma": "^0.7.2",
     "dayjs": "^1.7.7",
     "eva-icons": "^1.1.0",
+    "lodash": "^4.17.11",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
     "nerio-js-utils": "^1.0.10",
